# telegram-bot-template

./: .gitignore  README.md  env_sample  pyproject.toml
src/: bot.py
src/tgbot/databases/: contextmanagers.py  database.py
src/tgbot/handlers/: callback.py  message.py  users.py
src/tgbot/misc/: register_all_services.py  set_default_commands.py
src/tgbot/settings/: config.py  consts.py  data.py
